# Speaky

./: CLAUDE.md  LICENSE  README.md  README_ZH.md  Work.md  index.html  indicator.html  package-lock.json  package.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  release.yml
src/: App.tsx  App.vue  indicator.tsx  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  history.rs  lib.rs  logging.rs  main.rs  state.rs
src-tauri/src/asr/: client.rs  mod.rs  model_manager.rs  protocol.rs  provider.rs
src-tauri/src/asr/providers/: doubao.rs  mod.rs  whisper_api.rs  whisper_local.rs
src-tauri/src/audio/: capture.rs
src-tauri/src/input/: keyboard.rs
src-tauri/src/postprocess/: client.rs  config.rs  mod.rs  prompts.rs
src/components/: Icons.tsx  types.ts
